Mejora de las especificaciones de configuraciones